postgres-macros/tests/fail-stable/literal_array_to_literal.stderr
error[E0277]: the trait bound `String: sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<String>>>` is not satisfied
 --> tests/fail-stable/literal_array_to_literal.rs:6:10
  |
6 |         .await
  |         -^^^^^
  |         ||
  |         |the trait `sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<String>>>` is not implemented for `String`, which is required by `Sql<'_, sqlm_postgres::types::Array<Vec<String>>, _>: IntoFuture`
  |         help: remove the `.await`
  |
  = help: the following other types implement trait `sqlm_postgres::query::Query<Cols>`:
            <Vec<u8> as sqlm_postgres::query::Query<Primitive<Bytea>>>
            <Vec<Vec<u8>> as sqlm_postgres::query::Query<Primitive<Bytea>>>
            <Vec<Vec<u8>> as sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<Bytea>>>>
            <Vec<T> as sqlm_postgres::query::Query<Struct<Cols>>>
            <Vec<T> as sqlm_postgres::query::Query<Primitive<<T as SqlType>::Type>>>
            <Vec<T> as sqlm_postgres::query::Query<sqlm_postgres::types::Array<Vec<<T as SqlType>::Type>>>>
            <Option<Vec<u8>> as sqlm_postgres::query::Query<Primitive<Bytea>>>
            <Option<T> as sqlm_postgres::query::Query<Struct<Cols>>>
          and $N others
  = note: required for `Sql<'_, sqlm_postgres::types::Array<Vec<String>>, String>` to implement `IntoFuture`
